--- a/Outfitry-HTML/index.html
+++ b/Outfitry-HTML/index.html
@@ -35,12 +35,12 @@
   
         <a href="community.html" data-lang-key="community"><i class="fas fa-users"></i> Community</a>
         <a href="custom.html" data-lang-key="custom"><i class="fas fa-cut"></i> Custom</a>
-        <a href="#" data-lang-key="company"><i class="fas fa-building"></i> Company</a>
-        <a href="#" data-lang-key="pricing"><i class="fas fa-dollar-sign"></i> Pricing</a>
+        <a href="company.html" data-lang-key="company"><i class="fas fa-building"></i> Company</a>
+        <a href="price.html" data-lang-key="pricing"><i class="fas fa-dollar-sign"></i> Pricing</a>
       </div>
       <div class="nav-right">
         <a href="login.html" data-lang-key="login">Login</a>
-        <a href="#" class="cta" data-lang-key="get-outfitry-free">Get Outfitry Free</a>
+        <a href="signup.html" class="cta" data-lang-key="get-outfitry-free">Get Outfitry Free</a>
         <select class="lang-select" onchange="changeLanguage(this.value)">
           <option value="en">English</option>
           <option value="th">ไทย</option>
@@ -247,6 +247,7 @@
     document.querySelector(".lang-select").value = defaultLang;
     changeLanguage(defaultLang);
   </script>
+
 
 </body>
 </html>
