--- a/Outfitry-HTML/matching.html
+++ b/Outfitry-HTML/matching.html
@@ -15,13 +15,13 @@
     <a href="index.html">
       <img src="images/logo.jpg" alt="Logo" class="logo-img">
     </a>
-    <a href="index.html"><i class="fas fa-home"></i> Homepage</a>
-    <a href="matching.html"><i class="fas fa-tshirt"></i> Matching Outfit</a>
-    <a href="content.html"><i class="fas fa-file-alt"></i> Content</a>
-    <a href="community.html"><i class="fas fa-users"></i> Community</a>
-    <a href="custom.html"><i class="fas fa-cut"></i> Custom Clothing</a>
-    <a href="#"><i class="fas fa-building"></i> Company</a>
-    <a href="#"><i class="fas fa-dollar-sign"></i> Pricing</a>
+    <a href="index.html">🏠 Home</a>
+    <a href="matching.html">👗 Matching</a>
+    <a href="content.html">📄 Content</a>
+    <a href="community.html">👥 Community</a>
+    <a href="custom.html">🧵 Custom Clothing</a>
+    <a href="company.html">🏢 Company</a>
+    <a href="price.html">💲 Pricing</a>
   </div>
 
   <!-- Main Content -->
