--- a/Outfitry-HTML/price.html
+++ b/Outfitry-HTML/price.html
@@ -217,7 +217,7 @@
             <li>Accessory Styling Guide</li>
             <li>My closet</li>
           </ul>
-          <button>Get Supernova</button>
+           <a href="supernova.html"><button>Get Supernova</button></a>
         </div>
       </div>
       <div class="faq">
