--- a/Outfitry-HTML/shop-detail.html
+++ b/Outfitry-HTML/shop-detail.html
@@ -113,7 +113,7 @@
           </div>
         </div>
         <p class="review-text text-gray-600">
-          งานตัดเย็บคุณภาพดีมาก ตรงตามแบบที่สั่ง ช่างให้คำแนะนำดี แต่รอของนิดนึง 总体来说คุ้มค่าค่ะ!
+          งานตัดเย็บคุณภาพดีมาก ตรงตามแบบที่สั่ง ช่างให้คำแนะนำดี แต่รอของนิดนึงคุ้มค่าค่ะ!
         </p>
         <img src="D:\outfitry\Outfitry-HTML\images\5.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
       </div>
@@ -162,7 +162,7 @@
           <p class="review-text text-gray-600">
             ชอบมากเลยค่ะ! ช่างตัดเย็บเก่งมาก ออกแบบให้เข้ากับสไตล์ที่ต้องการ งานสวยเกินคาด!
           </p>
-          <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน5" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+          <!-- <img src="#" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover"> -->
         </div>
 
         <!-- Review 6 -->
@@ -177,7 +177,7 @@
           <p class="review-text text-gray-600">
             งานดี ฝีมือช่างเยี่ยม แต่การสื่อสารตอนแรกช้าไปนิด พอได้คุยแล้วทุกอย่างราบรื่น ผลงานสุดยอด!
           </p>
-          <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน6" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+          <!-- <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน6" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover"> -->
         </div>
 
         <!-- Review 7 -->
@@ -207,7 +207,7 @@
           <p class="review-text text-gray-600">
             งานตัดเย็บดีมาก ใส่ใจรายละเอียด แต่อยากให้มีตัวเลือกผ้าเยอะกว่านี้ โดยรวมแล้วชอบครับ
           </p>
-          <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน8" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+          <!-- <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน8" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover"> -->
         </div>
 
         <!-- Review 9 -->
@@ -222,7 +222,7 @@
           <p class="review-text text-gray-600">
             สั่งตัดชุดไปงานสำคัญ ผลงานออกมาสวยเกินคาด! ช่างช่วยออกแบบให้เข้ากับตัว ปลื้มมากค่ะ!
           </p>
-          <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน9" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+          <!-- <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน9" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover"> -->
         </div>
 
         <!-- Review 10 -->
@@ -237,7 +237,7 @@
           <p class="review-text text-gray-600">
             งานตัดเย็บดี ฝีมือช่างเยี่ยม แต่รอนานนิดนึงเพราะคิวเยอะ โดยรวมแล้วพอใจกับผลงานมากค่ะ
           </p>
-          <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน10" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+          <!-- <img src="https://via.placeholder.com/200x150?text=ตัวอย่างงาน10" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover"> -->
         </div>
       </div>
     </div>
