--- a/Outfitry-HTML/price.html
+++ b/Outfitry-HTML/price.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      background: linear-gradient(135deg, #f0f4f8 0%, #d9e2ec 100%);
+      background: #fff8f1;
       color: #333;
     }
     .container {
