--- a/Outfitry-HTML/shop-detail.html
+++ b/Outfitry-HTML/shop-detail.html
@@ -58,7 +58,7 @@
 
     <!-- Main Image -->
     <div class="image-wrapper relative mb-8 fade-in">
-      <img src="D:\outfitry\Outfitry-HTML\images\ผลงาน1.jpg" alt="เสื้อผ้าสร้างฝัน" class="w-full h-96 object-cover rounded-xl shadow-lg">
+      <img src="images/ผลงาน1.jpg" alt="เสื้อผ้าสร้างฝัน" class="w-full h-96 object-cover rounded-xl shadow-lg">
       <div class="dots absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2">
         <span class="dot active w-3 h-3 rounded-full bg-amber-500 cursor-pointer"></span>
         <span class="dot w-3 h-3 rounded-full bg-gray-300 cursor-pointer"></span>
@@ -91,7 +91,7 @@
       <!-- Review 1 -->
       <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
         <div class="review-header flex items-center gap-4">
-          <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (19).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+          <img src="images\ดาวน์โหลด (19).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
           <div>
             <strong class="text-gray-800">เรณู ชูรีย์</strong><br>
             <span class="text-amber-500">★★★★★</span>
@@ -100,13 +100,13 @@
         <p class="review-text text-gray-600">
           ร้านนี้ทำงานสวยมาก! งานละเอียด ใส่ใจทุกรายละเอียด พูดคุยง่าย ช่างแนะนำดี ประทับใจสุด ๆ เลยค่ะ ❤️
         </p>
-        <img src="D:\outfitry\Outfitry-HTML\images\3.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+        <img src="images\3.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
       </div>
 
       <!-- Review 2 -->
       <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
         <div class="review-header flex items-center gap-4">
-          <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (25).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+          <img src="images\ดาวน์โหลด (25).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
           <div>
             <strong class="text-gray-800">สมชาย ใจดี</strong><br>
             <span class="text-amber-500">★★★★★</span>
@@ -115,13 +115,13 @@
         <p class="review-text text-gray-600">
           งานตัดเย็บคุณภาพดีมาก ตรงตามแบบที่สั่ง ช่างให้คำแนะนำดี แต่รอของนิดนึงคุ้มค่าค่ะ!
         </p>
-        <img src="D:\outfitry\Outfitry-HTML\images\5.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+        <img src="images\5.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
       </div>
 
       <!-- Review 3 -->
       <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
         <div class="review-header flex items-center gap-4">
-          <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (20).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+          <img src="images\ดาวน์โหลด (20).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
           <div>
             <strong class="text-gray-800">นภัสสร แสงจันทร์</strong><br>
             <span class="text-amber-500">★★★★★</span>
@@ -130,7 +130,7 @@
         <p class="review-text text-gray-600">
           ประทับใจมากค่ะ! เสื้อที่สั่งตัดใส่ได้พอดีเป๊ะ งานเนี๊ยบสุด ๆ ไว้จะมาอุดหนุนอีกแน่นอน!
         </p>
-        <img src="D:\outfitry\Outfitry-HTML\images\4.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+        <img src="images\4.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
       </div>
 
       <!-- Hidden Reviews (shown when clicking "ดูทั้งหมด") -->
@@ -138,7 +138,7 @@
         <!-- Review 4 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (26).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images\ดาวน์โหลด (26).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800">กิตติพงษ์ สุวรรณ</strong><br>
               <span class="text-amber-500">★★★★☆</span>
@@ -147,13 +147,13 @@
           <p class="review-text text-gray-600">
             ร้านนี้ดีมาก งานตัดเย็บเรียบร้อย ราคาไม่แพงเกินไป แต่รอคิวนานหน่อย ถ้าไม่รีบแนะนำเลยครับ
           </p>
-          <img src="D:\outfitry\Outfitry-HTML\images\2.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+          <img src="images\2.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
         </div>
 
         <!-- Review 5 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (21).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images\ดาวน์โหลด (21).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800">ธัญญารัตน์ พิมพ์ใจ</strong><br>
               <span class="text-amber-500">★★★★☆</span>
@@ -168,7 +168,7 @@
         <!-- Review 6 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (27).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images\ดาวน์โหลด (27).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800">วรวิทย์ ทองคำ</strong><br>
               <span class="text-amber-500">★★★★☆</span>
@@ -183,7 +183,7 @@
         <!-- Review 7 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (22).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images\ดาวน์โหลด (22).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800">ศิริพร ดวงดี</strong><br>
               <span class="text-amber-500">★★★★★</span>
@@ -192,13 +192,13 @@
           <p class="review-text text-gray-600">
             ร้านนี้คือที่สุด! เสื้อที่ตัดมาใส่แล้วมั่นใจมาก งานปราณีต ช่างใจดี คุ้มทุกบาททุกสตางค์!
           </p>
-          <img src="D:\outfitry\Outfitry-HTML\images\1.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+          <img src="images\1.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
         </div>
 
         <!-- Review 8 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (28).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images\ดาวน์โหลด (28).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800">ชัยวัฒน์ สุขใจ</strong><br>
               <span class="text-amber-500">★★★★☆</span>
@@ -213,7 +213,7 @@
         <!-- Review 9 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (23).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images\ดาวน์โหลด (23).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800">ปวีณา สายลม</strong><br>
               <span class="text-amber-500">★★★★★</span>
@@ -228,7 +228,7 @@
         <!-- Review 10 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="D:\outfitry\Outfitry-HTML\images\ดาวน์โหลด (24).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images\ดาวน์โหลด (24).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800">อรุณี พรหมมา</strong><br>
               <span class="text-amber-500">★★★★☆</span>
