--- a/Outfitry-HTML/matching.html
+++ b/Outfitry-HTML/matching.html
@@ -1,76 +1,473 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Matching Outfits - Outfitry</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matching Outfits</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Prompt:wght@500;600;700&display=swap" rel="stylesheet">
+    <style>
+        /* Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body & Font */
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #fefef9;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        /* Topbar Navigation */
+        .topbar {
+            background-color: #85df80;
+            color: white;
+            padding: 12px 30px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            height: 80px;
+            display: flex;
+            align-items: center;
+        }
+
+        .nav-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            max-width: 1600px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .nav-left {
+            display: flex;
+            align-items: center;
+            font-size: 26px;
+            font-weight: 800;
+            min-width: 0;
+            margin-left: -12px;
+        }
+
+        .nav-logo {
+            width: 36px;
+            height: 36px;
+            margin-right: 18px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        .nav-center {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            flex: 2;
+            min-width: 0;
+        }
+
+        .nav-center a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 10px;
+            display: inline-flex;
+            align-items: center;
+            white-space: nowrap;
+            font-size: 17px;
+            font-weight: 800;
+            text-align: center;
+            line-height: 1.2;
+        }
+
+        .nav-center a i {
+            margin-right: 10px;
+            font-size: 25px;
+            vertical-align: middle;
+            line-height: 1;
+        }
+
+        .nav-right {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            justify-content: flex-end;
+            min-width: 0;
+        }
+
+        .nav-right a {
+            color: white;
+            text-decoration: none;
+            padding: 6px 14px;
+            border-radius: 4px;
+            white-space: nowrap;
+            font-size: 16px;
+            font-weight: 800;
+        }
+
+        .nav-right .cta {
+            background-color: #a7e2ef;
+            color: black;
+            font-weight: 800;
+            padding: 6px 18px;
+            white-space: nowrap;
+            min-width: 140px;
+            text-align: center;
+            font-size: 16px;
+        }
+
+        .lang-select {
+            background: #fff !important;
+            color: #333 !important;
+            border: 1px solid #ccc !important;
+            padding: 6px 28px 6px 10px !important;
+            border-radius: 4px !important;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
+            font-size: 16px !important;
+            font-weight: 800 !important;
+            cursor: pointer !important;
+            min-width: 95px !important;
+            appearance: none !important;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23333' width='18px' height='18px'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E") !important;
+            background-repeat: no-repeat !important;
+            background-position: right 10px center !important;
+            background-size: 14px !important;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease !important;
+        }
+
+        .lang-select:hover {
+            border-color: #999 !important;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15) !important;
+        }
+
+        .lang-select:focus {
+            outline: none !important;
+            border-color: #EABB84 !important;
+            box-shadow: 0 0 0 2px rgba(234, 187, 132, 0.3) !important;
+        }
+
+        .nav-center a:hover {
+            color: #EABB84;
+            background-color: white;
+            transform: scale(1.05);
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+            border-radius: 8px;
+            transition: all 0.3s ease;
+        }
+
+        .nav-right a:hover {
+            background-color: white;
+            color: #EABB84;
+            transition: all 0.3s ease;
+            border-radius: 6px;
+        }
+
+        .nav-right .cta:hover {
+            background-color: #ffd6a4;
+            color: black;
+            transform: scale(1.05);
+            transition: all 0.3s ease;
+        }
+
+        /* Responsive Navigation */
+        @media (max-width: 767px) {
+            .topbar {
+                height: auto;
+                padding: 10px 15px;
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .nav-container {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 15px;
+                padding: 0;
+            }
+
+            .nav-left {
+                margin-bottom: 10px;
+                margin-left: 0;
+                font-size: 20px;
+            }
+
+            .nav-logo {
+                width: 32px;
+                height: 32px;
+                margin-right: 12px;
+            }
+
+            .nav-center {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: flex-start;
+                width: 100%;
+                gap: 6px;
+            }
+
+            .nav-center a {
+                padding: 6px 10px;
+                font-size: 16px;
+                font-weight: 800;
+            }
+
+            .nav-center a i {
+                font-size: 20px;
+                margin-right: 6px;
+            }
+
+            .nav-right {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: flex-start;
+                gap: 10px;
+                width: 100%;
+            }
+
+            .nav-right a {
+                padding: 4px 8px;
+                font-size: 12px;
+                font-weight: 800;
+            }
+
+            .nav-right .cta {
+                min-width: 120px;
+                font-size: 12px;
+            }
+
+            .lang-select {
+                min-width: 85px !important;
+                padding: 4px 20px 4px 6px !important;
+                font-size: 12px !important;
+                font-weight: 800 !important;
+                background-size: 10px !important;
+            }
+        }
+
+        @media (min-width: 768px) and (max-width: 1023px) {
+            .nav-container {
+                max-width: 1200px;
+                padding: 0 15px;
+            }
+
+            .nav-left {
+                font-size: 22px;
+            }
+
+            .nav-logo {
+                width: 34px;
+                height: 34px;
+            }
+
+            .nav-center {
+                gap: 8px;
+            }
+
+            .nav-center a {
+                padding: 8px 14px;
+                font-size: 17px;
+                font-weight: 800;
+            }
+
+            .nav-center a i {
+                font-size: 21px;
+                margin-right: 8px;
+            }
+
+            .nav-right a {
+                padding: 4px 10px;
+                font-size: 13px;
+                font-weight: 800;
+            }
+
+            .nav-right .cta {
+                min-width: 130px;
+                font-size: 13px;
+            }
+
+            .lang-select {
+                min-width: 90px !important;
+                font-size: 13px !important;
+                font-weight: 800 !important;
+            }
+        }
+
+        /* Main Content */
+        .main-content {
+            padding-top: 90px;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+
+        @media (max-width: 767px) {
+            .main-content {
+                padding-top: 200px;
+            }
+        }
+
+        /* Matching Outfit Styles */
+        .matching-container {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        input[type="text"], select {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0 20px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+        }
+
+        .section {
+            margin-bottom: 25px;
+        }
+
+        .upload-box input {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .submit-btn {
+            padding: 10px 20px;
+            border: none;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 8px;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+        }
+
+        .submit-btn:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
-<body class="matching-body">
-
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <a href="index.html">
-      <img src="images/logo.jpg" alt="Logo" class="logo-img">
-    </a>
-    <a href="index.html">🏠 Home</a>
-    <a href="matching.html">👗 Matching</a>
-    <a href="content.html">📄 Content</a>
-    <a href="community.html">👥 Community</a>
-    <a href="custom.html">🧵 Custom Clothing</a>
-    <a href="company.html">🏢 Company</a>
-    <a href="price.html">💲 Pricing</a>
-  </div>
-
-  <!-- Main Content -->
-  <div class="main-content matching-container">
-    <h2>👗 Matching Outfits</h2>
-
-    <label for="desc">Describe the style you want</label>
-    <input type="text" id="desc" placeholder="Describe the style you want..." />
-
-    <label for="style">Style</label>
-    <select id="style">
-      <option>Select your style</option>
-      <option>Casual</option>
-      <option>Work</option>
-      <option>Beach</option>
-      <option>Date</option>
-      <option>Sporty</option> <!-- New Option -->
-      <option>Streetwear</option> <!-- New Option -->
-      <option>Elegant</option> <!-- New Option -->
-      <option>Bohemian</option> <!-- New Option -->
-      <option>Vintage</option> <!-- New Option -->
-    </select>
-
-    <div class="section">
-      <h3>Top</h3>
-      <div class="upload-box">
-        <input type="file" id="top" accept="image/*" multiple />
-        <span>You can upload up to 3 images</span>
-      </div>
+<body>
+    <div class="topbar">
+        <div class="nav-container">
+            <div class="nav-left">
+                <img src="images/logo.jpg" alt="Outfitry Logo" class="nav-logo">
+                <span data-translate="brand">OUTFITRY</span>
+            </div>
+            <div class="nav-center">
+                <a href="index.html">🏠<span data-translate="home">Home</span></a>
+                <a href="matching.html" class="active">👗<span data-translate="matching">Matching</span></a>
+                <a href="content.html">📄<span data-translate="content">Content</span></a>
+                <a href="community.html">👥<span data-translate="community">Community</span></a>
+                <a href="custom.html">🧵<span data-translate="custom">Custom</span></a>
+                <a href="price.html">💰<span data-translate="pricing">Pricing</span></a>
+            </div>
+            <div class="nav-right">
+                <a href="login.html" data-translate="login">Login</a>
+                <a href="#" class="cta" data-translate="cta">Get Outfitry Free</a>
+                <select class="lang-select" aria-label="Select language" onchange="changeLanguage(this.value)">
+                    <option value="en">English</option>
+                    <option value="th">ไทย</option>
+                </select>
+            </div>
+        </div>
     </div>
 
-    <div class="section">
-      <h3>Bottom</h3>
-      <div class="upload-box">
-        <input type="file" id="bottom" accept="image/*" multiple />
-        <span>You can upload up to 3 images</span>
-      </div>
+    <div class="main-content">
+        <div class="matching-container">
+            <h1>👗 Matching Outfits</h1>
+            <div class="section">
+                <h3>Describe the style you want</h3>
+                <input type="text" placeholder="Style">
+                <select>
+                    <option>Select your style</option>
+                    <option>Casual</option>
+                    <option>Work</option>
+                    <option>Beach</option>
+                    <option>Date</option>
+                    <option>Sporty</option>
+                    <option>Streetwear</option>
+                    <option>Elegant</option>
+                    <option>Bohemian</option>
+                    <option>Vintage</option>
+                </select>
+            </div>
+
+            <div class="section">
+                <h3>Top</h3>
+                <div class="upload-box">
+                    <input type="file" accept="image/*" multiple>
+                    <p>You can upload up to 3 images</p>
+                </div>
+            </div>
+
+            <div class="section">
+                <h3>Bottom</h3>
+                <div class="upload-box">
+                    <input type="file" accept="image/*" multiple>
+                    <p>You can upload up to 3 images</p>
+                </div>
+            </div>
+
+            <div class="section">
+                <h3>Dress</h3>
+                <div class="upload-box">
+                    <input type="file" accept="image/*" multiple>
+                    <p>You can upload up to 3 images</p>
+                </div>
+            </div>
+
+            <button class="submit-btn">Create Your Look</button>
+        </div>
     </div>
 
-    <div class="section">
-      <h3>Dress</h3>
-      <div class="upload-box">
-        <input type="file" id="dress" accept="image/*" multiple />
-        <span>You can upload up to 3 images</span>
-      </div>
-    </div>
+    <script>
+        // Language translations
+        const translations = {
+            en: {
+                brand: "OUTFITRY",
+                home: "Home",
+                matching: "Matching",
+                content: "Content",
+                community: "Community",
+                custom: "Custom",
+                pricing: "Pricing",
+                login: "Login",
+                cta: "Get Outfitry Free"
+            },
+            th: {
+                brand: "OUTFITRY",
+                home: "หน้าแรก",
+                matching: "จับคู่เสื้อผ้า",
+                content: "เนื้อหา",
+                community: "ชุมชน",
+                custom: "ตัดแต่งเสื้อผ้า",
+                pricing: "ราคา",
+                login: "เข้าสู่ระบบ",
+                cta: "รับ Outfitry ฟรี"
+            }
+        };
 
-    <button class="submit-btn">Create Your Look</button>
-  </div>
+        // Function to change language
+        function changeLanguage(lang) {
+            document.documentElement.lang = lang;
+            document.querySelectorAll('[data-translate]').forEach(element => {
+                const key = element.getAttribute('data-translate');
+                element.textContent = translations[lang][key];
+            });
+        }
 
+        // Initialize language based on default selection
+        document.addEventListener('DOMContentLoaded', () => {
+            const langSelect = document.querySelector('.lang-select');
+            changeLanguage(langSelect.value);
+        });
+    </script>
 </body>
 </html>
