--- a/Outfitry-HTML/shop-detail1.html
+++ b/Outfitry-HTML/shop-detail1.html
@@ -70,7 +70,7 @@
     <div class="shop-info-card bg-white rounded-xl shadow-md p-6 mb-8 slide-in">
       <h3 class="text-2xl font-bold text-gray-800 mb-2">ผ้าสร้างฝัน</h3>
       <p class="text-gray-600 mb-2">📍 ลำลูกกา ปทุมธานี</p>
-      <p class="text-amber-600 font-medium mb-4">นำผ้ามาตัดเย็บเอง รับส่วนลดค่าตัดเย็บ 5%</p>
+      <p class="text-amber-600 font-medium mb-4">ลด 20% สำหรับการสั่งตัดเย็บครั้งแรก</p>
       <div class="shop-stats flex flex-wrap gap-4 text-sm text-gray-700">
         <div class="flex items-center">
           <span class="text-amber-500 mr-1">4.8</span> 🌟
@@ -269,3 +269,7 @@
   </script>
 </body>
 </html>
+
+
+
+
