--- a/Outfitry-HTML/shop-detail1.html
+++ b/Outfitry-HTML/shop-detail1.html
@@ -231,7 +231,7 @@
             <img src="images\ดาวน์โหลด (24).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800">อรุณี พรหมมา</strong><br>
-              <span class="text-amber-500">★★★★☆</span>
+              <span class="text-amber-500">★★★★★</span>
             </div>
           </div>
           <p class="review-text text-gray-600">
