--- a/Outfitry-HTML/shop-detail2.html
+++ b/Outfitry-HTML/shop-detail2.html
@@ -58,7 +58,7 @@
 
     <!-- Main Image -->
     <div class="image-wrapper relative mb-8 fade-in">
-      <img src="images/Flowing Fabric.jpg" alt="Flowing Fabric" class="w-full h-96 object-cover rounded-xl shadow-lg">
+      <img src="images/ผลงาน2.jpg" alt="Flowing Fabric" class="w-full h-96 object-cover rounded-xl shadow-lg">
       <div class="dots absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2">
         <span class="dot active w-3 h-3 rounded-full bg-amber-500 cursor-pointer"></span>
         <span class="dot w-3 h-3 rounded-full bg-gray-300 cursor-pointer"></span>
@@ -73,7 +73,7 @@
       <p class="text-amber-600 font-medium mb-4" data-translate="promo_flowing_fabric">ปรึกษาฟรีสำหรับลูกค้าใหม่</p>
       <div class="shop-stats flex flex-wrap gap-4 text-sm text-gray-700">
         <div class="flex items-center">
-          <span class="text-amber-500 mr-1" data-translate="rating_4_8_80">4.8</span> 🌟
+          <span class="text-amber-500 mr-1" data-translate="rating_4_8_80">4.6</span> 🌟
         </div>
         <div data-translate="shop_type_general">ร้านทั่วไป</div>
         <div data-translate="response_rate">100% การตอบกลับ</div>
@@ -82,7 +82,7 @@
 
     <!-- Reviews Section -->
     <div class="reviews-section flex justify-between items-center mb-6 slide-in">
-      <h3 class="text-xl font-semibold text-gray-800" data-translate="reviews_rating">⭐ 4.8 คะแนน (80)</h3>
+      <h3 class="text-xl font-semibold text-gray-800" data-translate="reviews_rating">⭐ 4.6 คะแนน (9)</h3>
       <a href="#" id="show-all-reviews" class="text-amber-600 hover:text-amber-700 font-medium" data-translate="view_all">ดูทั้งหมด</a>
     </div>
 
@@ -91,7 +91,7 @@
       <!-- Review 1 -->
       <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
         <div class="review-header flex items-center gap-4">
-          <img src="images/user1.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+          <img src="images/ดาวน์โหลด (32).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
           <div>
             <strong class="text-gray-800" data-translate="reviewer_1_name">นลินี สายน้ำ</strong><br>
             <span class="text-amber-500">★★★★★</span>
@@ -100,13 +100,13 @@
         <p class="review-text text-gray-600" data-translate="review_1_text">
           ร้านนี้ตัดชุดสวยมาก! งานปราณีต ช่างให้คำแนะนำดีสุด ๆ ประทับใจมากค่ะ! ❤️
         </p>
-        <img src="images/portfolio-flowing-fabric-1.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+        <img src="images/6.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
       </div>
 
       <!-- Review 2 -->
       <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
         <div class="review-header flex items-center gap-4">
-          <img src="images/user2.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+          <img src="images/ดาวน์โหลด (37).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
           <div>
             <strong class="text-gray-800" data-translate="reviewer_2_name">ภัทรภณ จันทร์แจ้ง</strong><br>
             <span class="text-amber-500">★★★★★</span>
@@ -115,13 +115,13 @@
         <p class="review-text text-gray-600" data-translate="review_2_text">
           งานตัดเย็บคุณภาพดี ตรงตามแบบที่สั่ง ช่างเป็นมิตรมาก คุ้มค่ากับราคา!
         </p>
-        <img src="images/portfolio-flowing-fabric-2.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+        <!-- <img src="images/portfolio-flowing-fabric-2.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover"> -->
       </div>
 
       <!-- Review 3 -->
       <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
         <div class="review-header flex items-center gap-4">
-          <img src="images/user3.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+          <img src="images/ดาวน์โหลด (33).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
           <div>
             <strong class="text-gray-800" data-translate="reviewer_3_name">ศรัญญา แสงจันทร์</strong><br>
             <span class="text-amber-500">★★★★★</span>
@@ -130,15 +130,15 @@
         <p class="review-text text-gray-600" data-translate="review_3_text">
           ชุดที่สั่งตัดใส่พอดีมาก งานสวยเกินคาด ช่างออกแบบให้เข้ากับตัว ต้องมาอุดหนุนอีก!
         </p>
-        <img src="images/portfolio-flowing-fabric-3.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
-      </div>
+
+     </div>
 
       <!-- Hidden Reviews (shown when clicking "ดูทั้งหมด") -->
       <div class="hidden-review">
         <!-- Review 4 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="images/user4.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images/ดาวน์โหลด (38).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800" data-translate="reviewer_4_name">กิตติชัย สุวรรณ</strong><br>
               <span class="text-amber-500">★★★★☆</span>
@@ -147,13 +147,13 @@
           <p class="review-text text-gray-600" data-translate="review_4_text">
             งานตัดเย็บดี ฝีมือช่างเยี่ยม รอนานนิดหน่อยเพราะคิวเยอะ แต่ผลงานคุ้มค่า!
           </p>
-          <img src="images/portfolio-flowing-fabric-4.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
+          <img src="images/8.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
         </div>
 
         <!-- Review 5 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="images/user5.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images/ดาวน์โหลด (34).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800" data-translate="reviewer_5_name">จิราภา ใจเย็น</strong><br>
               <span class="text-amber-500">★★★★★</span>
@@ -167,7 +167,7 @@
         <!-- Review 6 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="images/user6.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images/ดาวน์โหลด (39).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800" data-translate="reviewer_6_name">วรุตม์ ทองใบ</strong><br>
               <span class="text-amber-500">★★★★☆</span>
@@ -176,12 +176,13 @@
           <p class="review-text text-gray-600" data-translate="review_6_text">
             งานตัดเย็บดีมาก แต่การสื่อสารช้าไปนิด พอได้คุยแล้วทุกอย่างราบรื่น ผลงานสวย!
           </p>
+          <img src="images/7.jpg" alt="ตัวอย่างงาน" class="review-photo w-full max-w-xs rounded-lg object-cover">
         </div>
 
         <!-- Review 7 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="images/user7.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images/ดาวน์โหลด (35).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800" data-translate="reviewer_7_name">สุนิสา ดวงดี</strong><br>
               <span class="text-amber-500">★★★★★</span>
@@ -195,21 +196,21 @@
         <!-- Review 8 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="images/user8.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images/ดาวน์โหลด (40).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800" data-translate="reviewer_8_name">ชยพล สุขใจ</strong><br>
-              <span class="text-amber-500">★★★★☆</span>
+              <span class="text-amber-500">★★★☆☆</span>
             </div>
           </div>
           <p class="review-text text-gray-600" data-translate="review_8_text">
-            งานตัดเย็บดี ฝีมือช่างเยี่ยม อยากให้มีตัวเลือกผ้าเยอะกว่านี้ แต่โดยรวมพอใจ!
+            งานตัดเย็บดี แต่รอนาน อยากให้มีตัวเลือกผ้าเยอะกว่านี้ แต่โดยรวมพอใจ!
           </p>
         </div>
 
         <!-- Review 9 -->
         <div class="review-card bg-white rounded-xl shadow-md p-6 flex flex-col gap-4 slide-in mb-4">
           <div class="review-header flex items-center gap-4">
-            <img src="images/user9.jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
+            <img src="images/ดาวน์โหลด (36).jpg" alt="User" class="user-img w-12 h-12 rounded-full object-cover border-2 border-gray-200">
             <div>
               <strong class="text-gray-800" data-translate="reviewer_9_name">ปวีณา ลมใส</strong><br>
               <span class="text-amber-500">★★★★★</span>
@@ -233,10 +234,10 @@
         shop_flowing_fabric: "Flowing Fabric",
         location_bang_bua_thong: "Bang Bua Thong, Nonthaburi",
         promo_flowing_fabric: "Free consultation for first-time customers",
-        rating_4_8_80: "4.8",
+        rating_4_8_80: "4.6",
         shop_type_general: "General Shop",
         response_rate: "100% Response Rate",
-        reviews_rating: "⭐ 4.8 Rating (80)",
+        reviews_rating: "⭐ 4.6 Rating (9)",
         view_all: "View All",
         show_less: "Show Less",
         reviewer_1_name: "Nalinee Sainam",
@@ -254,7 +255,7 @@
         reviewer_7_name: "Sunisa Duangdee",
         review_7_text: "This shop is amazing! The tailored outfit makes me feel confident. Flawless work, kind tailor, worth every penny!",
         reviewer_8_name: "Chayaphon Sukjai",
-        review_8_text: "Good tailoring, excellent craftsmanship. Would love more fabric options, but overall very satisfied!",
+        review_8_text: "The tailoring is good, but the wait is long. I wish there were more fabric options, but overall, I’m satisfied!",
         reviewer_9_name: "Pawina Lomsai",
         review_9_text: "Ordered a dress for an event, and it was stunning! The tailor designed it to fit me perfectly. So thrilled!"
       },
@@ -265,10 +266,10 @@
         shop_flowing_fabric: "Flowing Fabric",
         location_bang_bua_thong: "บางบัวทอง นนทบุรี",
         promo_flowing_fabric: "ปรึกษาฟรีสำหรับลูกค้าใหม่",
-        rating_4_8_80: "4.8",
+        rating_4_8_80: "4.6",
         shop_type_general: "ร้านทั่วไป",
         response_rate: "100% การตอบกลับ",
-        reviews_rating: "⭐ 4.8 คะแนน (80)",
+        reviews_rating: "⭐ 4.6 คะแนน (9)",
         view_all: "ดูทั้งหมด",
         show_less: "แสดงน้อยลง",
         reviewer_1_name: "นลินี สายน้ำ",
@@ -286,7 +287,7 @@
         reviewer_7_name: "สุนิสา ดวงดี",
         review_7_text: "ร้านนี้สุดยอด! ชุดที่ตัดมาใส่แล้วมั่นใจมาก งานเนี๊ยบ ช่างใจดี คุ้มทุกบาท!",
         reviewer_8_name: "ชยพล สุขใจ",
-        review_8_text: "งานตัดเย็บดี ฝีมือช่างเยี่ยม อยากให้มีตัวเลือกผ้าเยอะกว่านี้ แต่โดยรวมพอใจ!",
+        review_8_text: "งานตัดเย็บดี แต่รอนาน อยากให้มีตัวเลือกผ้าเยอะกว่านี้ แต่โดยรวมพอใจ!",
         reviewer_9_name: "ปวีณา ลมใส",
         review_9_text: "สั่งตัดชุดไปงาน สวยเกินคาด! ช่างช่วยออกแบบให้เข้ากับตัว ปลื้มมากค่ะ!"
       }
